shelter/src/pages/pets/style.scss
/// Header pets
.header {
  &.pets {
    .hamburger-menu,
    .menu-wrapper:before,
    .menu-wrapper:after {
      background: #000000;
    }
    .top-bar {
      height: 120px;
      .top-bar__logo-box {
        .top-bar__logo {
          color: #545454;
        }
        .top-bar__descr {
          color: #292929;
        }
      }
    }
    .navigation__list {
      .navigation__li {
        .navigation__link {
          color: #545454;
          &:hover {
            color: #292929;
          }
          &:active {
            color: #545454;
          }
        }
        .navigation__link_active {
          color: #292929;
        }
      }
    }
  }
}
.main {
  &.pets {
    flex: 1;
    .our-friends-section {
      margin-top: 120px;
      height: 100%;
      padding-bottom: 101px;
      .our-friends {
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 0;
        .our-friends__cards {
          display: flex;
          justify-content: center;
          flex-wrap: wrap;
          row-gap: 30px;
          column-gap: 40px;
          padding: 59px 0;
          &.animateLeft {
            @keyframes animateLeft {
              0% {
                opacity: 1;
                transform: translateX(0px);
              }
              100% {
                opacity: 0;
                transform: translateX(-100px);
              }
            }
            animation: animateLeft 0.3s;
            animation-timing-function: ease-in;

            opacity: 0;
            transform: translateX(-100px);
          }
          &.animateLeftRevert {
            @keyframes animateLeftRevert {
              0% {
                opacity: 0;
                transform: translateX(100px);
              }
              100% {
                opacity: 1;
                transform: translateX(0px);
              }
            }
            animation: animateLeftRevert 0.3s forwards;
            animation-timing-function: ease-out;
          }
          &.animateRight {
            @keyframes animateRight {
              0% {
                opacity: 1;
                transform: translateX(0px);
              }
              100% {
                opacity: 0;
                transform: translateX(100px);
              }
            }
            animation: animateRight 0.3s;
            animation-timing-function: ease-in;

            opacity: 0;
            transform: translateX(100px);
          }
          &.animateRightRevert {
            @keyframes animateRightRevert {
              0% {
                opacity: 0;
                transform: translateX(-100px);
              }
              100% {
                opacity: 1;
                transform: translateX(0px);
              }
            }
            animation: animateRightRevert 0.3s forwards;
            animation-timing-function: ease-out;
          }
          // &.animate {
          //   @keyframes animate {
          //     0% {
          //       opacity: 1;
          //     }
          //     50% {
          //       opacity: 0;
          //     }
          //     100% {
          //       opacity: 1;
          //     }
          //   }
          // animation: animate 0.3s;
          // }
          // &.animates {
          //   @keyframes animates {
          //     0% {
          //       opacity: 1;
          //     }
          //     50% {
          //       opacity: 0;
          //     }
          //     100% {
          //       opacity: 1;
          //     }
          //   }
          // animation: animates 0.3s;
          // }
        }
        .our-friends__pagination {
          display: flex;
          gap: 20px;
        }
      }
    }
  }
}
@media screen and (max-width: 1279px) {
  .main.pets .our-friends-section .our-friends .our-friends__cards {
    column-gap: clamp(40px, 5vw, 320px);
  }
}
@media screen and (max-width: 768px) {
  .main {
    &.pets {
      .our-friends-section {
        padding-bottom: 77px;
        .our-friends {
          .our-friends__title {
            font-size: clamp(25px, 4.6vw, 35px);
          }
          .our-friends__cards {
            padding-top: 29px;
            padding-bottom: 39px;
          }
        }
      }
    }
  }
}
@media screen and (max-width: 767px) {
  .header {
    &.pets {
      .navigation {
        background: #fff;
      }
    }
  }
}
@media screen and (max-width: 480px) {
  .main {
    &.pets {
      .our-friends-section {
        padding-bottom: 42px;
        .our-friends {
          .our-friends__cards {
            padding-top: 42px;
            padding-bottom: 41px;
          }
          .our-friends__pagination {
            gap: 10px;
          }
        }
      }
    }
  }
}

